2018-01-xx 1.1.0 [xxxxxxx]
  + greyed-out classifiers also grey-out their contained features
2018-01-03 1.0.0 [4262282]
  + F7 in navigation view moves child diagram up and parent down
  + The text export contains IDs
2017-12-26 0.20.0 [534b171]
  + navigation mode: a newly initialized database shows a quick guide
  + navigation mode: root diagram has sky-blue background
  + orange background color marks new-object and new-diagram modes
  + link to the home page is added in the man page and on the startup screen
  + The 2nd click on the about button removes the about message
  + Ctrl-X/C/V,DEL work as expected during text editing
  + edit mode: Pink-selects elements only at the second click
2017-12-10 0.19.0 [221effc]
  + The default-names of new classifiers match their type
  + default-types of new objects fit to the diagram type and to the origin-classifier type now.
  + default-names of new objects are unique, no duplicate name errors unless forced
  + In new object mode, clicking into a possible parent classifiers creates a new child (depending on type)
  + children of CONTAINMENT relations are automatically embraced by _any_ ancestor
  + nicer layout when parents embrace CONTAINED children
  + Easier selection of the right relation in GUI_SKETCH_TOOLS_EDIT mode
  + Easier selection of classifiers in GUI_SKETCH_TOOLS_CREATE_OBJECT mode
  + Nicer layout: space area shall depend on the classifier type
2017-11-05 0.18.0 [2ac058e]
  + parent classifiers can contain children
2017-10-28 0.17.1 [c5ff71e]
  + fix for include paths on openSuSE Tumbleweed i586
2017-10-02 0.17.0 [fba4323]
  + Key control is possible: CTRL+C,V,X,Y,Z
  + Layout of relationships improved
  + Man page added
2017-09-11 0.16.2 [146b4e4]
  + bugfix: install uses less global paths for app icon
2017-09-10 0.16.1 [ce19eb3]
  + bugfix: desktop file is included in src distribution
2017-05-24 0.16 [ac34c09]
  + Classifier drawings represent the classifier type
2017-04-14 0.15 [69a0f6a]