@@ -11,6 +11,7 @@ static inline void data_diagramelement_init_empty ( data_diagramelement_t *this_
     (*this_).diagram_id = DATA_ID_VOID_ID;
     (*this_).classifier_id = DATA_ID_VOID_ID;
     (*this_).display_flags = DATA_DIAGRAMELEMENT_FLAG_NONE;
+    (*this_).focused_feature_id = DATA_ID_VOID_ID;
 }
 
 static inline void data_diagramelement_reinit_empty ( data_diagramelement_t *this_ )
@@ -27,6 +28,7 @@ static inline void data_diagramelement_init_new ( data_diagramelement_t *this_, 
     (*this_).diagram_id = diagram_id;
     (*this_).classifier_id = classifier_id;
     (*this_).display_flags = display_flags;
+    (*this_).focused_feature_id = DATA_ID_VOID_ID;
 }
 
 static inline void data_diagramelement_init ( data_diagramelement_t *this_,
@@ -39,6 +41,7 @@ static inline void data_diagramelement_init ( data_diagramelement_t *this_,
     (*this_).diagram_id = diagram_id;
     (*this_).classifier_id = classifier_id;
     (*this_).display_flags = display_flags;
+    (*this_).focused_feature_id = DATA_ID_VOID_ID;
 }
 
 static inline void data_diagramelement_reinit ( data_diagramelement_t *this_,
@@ -51,6 +54,7 @@ static inline void data_diagramelement_reinit ( data_diagramelement_t *this_,
     (*this_).diagram_id = diagram_id;
     (*this_).classifier_id = classifier_id;
     (*this_).display_flags = display_flags;
+    (*this_).focused_feature_id = DATA_ID_VOID_ID;
 }
 
 static inline void data_diagramelement_copy ( data_diagramelement_t *this_, const data_diagramelement_t *original )
@@ -80,6 +84,7 @@ static inline void data_diagramelement_trace ( data_diagramelement_t *this_ )
     TRACE_INFO_INT( "- diagram_id:", (*this_).diagram_id );
     TRACE_INFO_INT( "- classifier_id:", (*this_).classifier_id );
     TRACE_INFO_HEX( "- display_flags:", (*this_).display_flags );
+    TRACE_INFO_INT( "- focused_feature_id:", (*this_).focused_feature_id );
 }
 
 static inline int64_t data_diagramelement_get_id ( data_diagramelement_t *this_ )
