@@ -1,5 +1,6 @@
 2018-01-xx 1.1.0 [xxxxxxx]
   + greyed-out classifiers also grey-out their contained features
+  . sqlite updated from 3.10.2 to 3.21.0
 2018-01-03 1.0.0 [4262282]
   + F7 in navigation view moves child diagram up and parent down
   + The text export contains IDs
